# PQSDC

./: README.md
data/: data_download.sh
pqsdc_v1/: fileMerge.sh  fileSplite.sh  install.sh  partition.cpp  pqsdc_v1_cluster.slurm  pqsdc_v1_for_para.sh  pqsdc_v1_with_partition_and_mapping_.sh  pqsdc_v1_without_mapping.sh  pqsdc_v1_without_partition.sh  test.sh
pqsdc_v2/: PQVRC.cpp  install.sh  message.cpp  partition.cpp  pqsdc_tools.cpp  pqsdc_v2
results/: Ablation.csv  Ablation.py  CR.csv  CR.py  CT_and_CM.py  C_Pr.py  DT_and_DM.py  D_Pr .py  SRR027520.sum_result.csv  SRR027520.xlsx  Sequencing_Cost_Data_Table_May2022.xls  cluster.csv  cluster.py  cluster.xlsx  dataAnalysis.py  新建 文本文档.txt
script/: README.txt  exercise.sh  test.cpp  test_ablation_experiment.sh  test_cluster.sh  test_for_all - 副本.sh  test_for_all.sh  (+2 more)
source/FCLQC/: Cargo.toml  LICENSE  README.md
source/FCLQC/sample_data/: extreme.fastq  extreme.fastq.cflqc.prob  extreme.fastq.cflqc001.enc  extreme.qs  extreme_probability.fastq  extreme_probability.qs  huge_sample.fastq  huge_sample.qs  parameter.json  sample.fastq  sample.qs  sample_reference.read  sample_small_reference.read  small_sample.fastq  small_sample.qs
source/FCLQC/src/: counter.rs  decoder.rs  encoder.rs  file_management.rs  go_threads.rs  lib.rs  lookuptable.rs  main.rs  parameter.rs  range.rs
source/FCLQC/src/concurrency/: counterhandler.rs  decoderhandler.rs  encoderhandler.rs  mod.rs
source/FCLQC/tests/: test_counter.rs  test_counterhandler.rs  test_extremecase.rs  test_lookuptable.rs  test_pipeline.rs  test_split.rs
(+35 files in other folders)
