[package]
name = "fqcomp"
version = "0.1.0"
authors = ["Minhyeok01 <waveguryu@naver.com>"]
edition = "2018"

[lib]
name = "fqcomp"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
bitbit = "0.2.0"
bincode = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "*"
serde_derive = "1.0.114"